--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1244,24 +1244,144 @@ iframe {
 }
 
 .search-lawyer {
+	position: relative;
 	margin-top: 150px;
-	margin-left: 200px;
 	padding: 20px;
 	border-radius: 5px;
-	min-width: 30%;
-	min-height: 40%;
-	position: absolute;
+	width: 40%;
+	height: 40%;
 	top: 0;
 	left: 0;
 	background: #fdfdf5;
 }
 
-.search-lawyer form input {
-	margin-top: 20px;
+.search-lawyer form input,
+.search-lawyer form > div {
+	margin-top: 10px;
+}
+
+.search-lawyer form button {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 95%;
+	margin-left: 10px;
+	margin-bottom: 30px;
 }
 
 @media (max-width: 560px) {
 	.search-lawyer {
+		margin-left: 20px;
 		width: 90%;
 	}
+}
+
+.react-autosuggest__container {
+	position: relative;
+}
+
+.react-autosuggest__input {
+	margin-top: 5px;
+	width: 100%;
+	height: 43px;
+	padding: 10px 20px;
+	font-family: Helvetica, sans-serif;
+	font-weight: 300;
+	font-size: 16px;
+	border: 1px solid #dee2e6;
+	border-radius: 4px;
+}
+
+.react-autosuggest__input--focused {
+	outline: none;
+}
+
+.react-autosuggest__input--open {
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+	display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+	display: block;
+	position: absolute;
+	top: 51px;
+	width: 100%;
+	height: 180px;
+	overflow-y: scroll;
+	border: 1px solid #dee2e6;
+	background-color: #fff;
+	font-family: Helvetica, sans-serif;
+	font-weight: 300;
+	font-size: 16px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	z-index: 2;
+	margin-bottom: 50px;
+}
+
+.react-autosuggest__suggestions-list {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+	cursor: pointer;
+	padding: 10px 20px;
+}
+
+.react-autosuggest__suggestion--highlighted {
+	background-color: #ddd;
+}
+
+.react-switch-checkbox {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+.react-switch-label {
+	display: flex;
+	color: #fff;
+	font-size: .8rem;
+	align-items: center;
+	justify-content: space-between;
+	cursor: pointer;
+	width: 55px;
+	height: 25px;
+	background: grey;
+	border-radius: 55px;
+	position: relative;
+	transition: background-color .2s;
+}
+
+.react-switch-label .react-switch-button {
+	content: '';
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	border-radius: 25px;
+	transition: 0.2s;
+	background: #fdfdf5;
+	box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
+}
+
+.react-switch-checkbox:checked + .react-switch-label .react-switch-button {
+	left: calc(100% - 50%);
+	transform: translateX(calc(100% - 90%));
+}
+
+.react-switch-label:active .react-switch-button {
+	width: 25px;
+}
+
+.account-form input,
+.account-form textarea,
+.account-form select {
+	margin-bottom: 20px;
 }
