--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1245,18 +1245,19 @@ iframe {
 
 .search-lawyer {
 	position: relative;
-	margin-top: 150px;
+	margin-top: 100px;
 	padding: 20px;
 	border-radius: 5px;
-	width: 40%;
-	height: 40%;
+	width: 50%;
+	height: 60%;
 	top: 0;
 	left: 0;
 	background: #fdfdf5;
 }
 
 .search-lawyer form input,
-.search-lawyer form > div {
+.search-lawyer form > div,
+.search-lawyer form > select {
 	margin-top: 10px;
 }
 
